--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section id="about" class="intro">
         <h2>About Us</h2>
         <div class="">
-        <img src="assets/IMG-20230622-WA0004.jpg" style="width:500px; height:600px">
+        <img src="assets/IMG-20230622-WA0004.jpg" style="width:500px; height:600px">    
         </div>
         <p>Love Life Fundation is a multicultural group that works to promote healthy relationships and create a safe space for people of all backgrounds to come together and share their stories. The organization works to provide resources and support to individuals and families affected by domestic violence, sexual assault, and other forms of abuse. They also work to raise awareness about the importance of healthy relationships and provide education and training to help people build strong, healthy relationships. Love Life Fundation is committed to creating a safe and inclusive environment for everyone, regardless of race, gender, sexual orientation, or any other identity.</p>
       </section>
@@ -56,7 +56,7 @@
           <a href="" target="_blank" rel="noopener noreferrer">
             <img height="50px" width="50px" src="./assets/images/" alt=""></a>
           
-          <p>If you would like to get in touch with me, please feel free to email me at <a href="mailto:lovelifefundation@gmail.com">lovelifefundation@gmail.com</a>.</p>
+          <p>If you would like to get in touch with us, please feel free to email me at <a href="mailto:lovelifefundation@gmail.com">lovelifefundation@gmail.com</a>.</p>
       </section>
     </main>
   </body>
