index.js file edited

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="" target="_blank" rel="noopener noreferrer">
             <img height="50px" width="50px" src="./assets/images/" alt=""></a>
           
-          <p>If you would like to get in touch with us, please feel free to email me at <a href="mailto:lovelifefundation@gmail.com">lovelifefundation@gmail.com</a>.</p>
+          <p>If you would like to get in touch with us, please feel free to email us at <a href="mailto:lovelifefundation@gmail.com">lovelifefundation@gmail.com</a>.</p>
       </section>
     </main>
   </body>
