index.js file paragraph edited

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="">
         <img src="assets/IMG-20230622-WA0004.jpg" style="width:500px; height:600px">    
         </div>
-        <p>Love Life Fundation is a multicultural group that works to promote healthy relationships and create a safe space for people of all backgrounds to come together and share their stories. The organization works to provide resources and support to individuals and families affected by domestic violence, sexual assault, and other forms of abuse. They also work to raise awareness about the importance of healthy relationships and provide education and training to help people build strong, healthy relationships. Love Life Fundation is committed to creating a safe and inclusive environment for everyone, regardless of race, gender, sexual orientation, or any other identity.</p>
+        <p>Love Life Fundation is a multicultural group that works to promote healthy relationships and create a safe space for people of all backgrounds to come together and share their stories. They also work to raise awareness about the importanc of healthy living and promote positive change in the world. Love Life Fundation is committed to creating a safe and inclusive environment for everyone, regardless of race, gender, sexual orientation, or any other identity.</p>
       </section>
       <section id="work" class="work">
         <h2>OUTDOOR EVENTS</h2>
