index.js file new paragraph added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       </section>
       <section id="work" class="work">
         <h2>OUTDOOR EVENTS</h2>
+        <p>We host outdoor events to bring people together and create a safe space for them to share their stories. We also work with local organizations to provide resources and support to those in need. We are committed to creating a safe and inclusive environment for everyone, regardless of race, gender, sexual orientation, or any other identity.</p>
+        <p></p>>
         <div class="app-container">
           <div class="app-item">
             <a targt="_blank" href="">
